<resources>
    <string name="app_name">turistify</string>
    <string name="mis_experiencias">Juegos favoritos</string>
    <string name="chats">Chats</string>
    <string name="sin_cuenta">¿Sin cuenta?</string>
    <string name="Perfil">Perfil</string>
    <string name="titulo_perfil">Modifica tus datos</string>
    <string name="Filtros">Filtros</string>
    <string name="publicaciones">VIAJES PUBLICADOS</string>
    <string name="redsocial">Reddit</string>
    <string name="image_description">Describe tu imagen</string>
    <string name="titulo_ppal">Publicar un título</string>
    <string name="titulo_post">Lugar que visitaste</string>
    <string name="videojuego">Lugar reseñado </string>
    <string name="Fhome">Publicaciones</string>
    <string name="comienzaUnChat">Comunicate</string>
    <string name="registrate">REGISTRATE</string>
    <string name="nombre_usuario">"Nombre de Usuario"</string>
    <string name="correo">"Correo electrónico"</string>
    <string name="pass">"Contraseña"</string>
    <string name="pass1">"Confirmar Contraseña"</string>
    <string name="descripcion">Describe tu experiencia</string>
    <string name="presupuesto"> Presupuesto estimado (USD)</string>
    <string name="duracion">Duración del viaje (ej. 3 días)</string>
    <string name="publicar">Publicar</string>
    <string name="actualizar">Actualizar Perfil</string>
    <string name="transtionname_picture">transitionnamepicture</string>
    <string name="err_pass">La contraseña no puede estar vacía</string>
    <string name="err_pass1">La contraseña debe tener al menos 6 carácteres</string>
    <string name="err_pass2">Las contraseñas no coinciden</string>
    <string name="cargando">Cargando datos...</string>
    <string name="contentDescripcion">Lista de categorías</string>
    <string-array name="categorias_array">
        <item>Naturaleza</item>
        <item>Montaña</item>
        <item>Aventura</item>
        <item>Cultura</item>
        <item>Playa</item>
        <item>Religión</item>
    </string-array>

    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">N4rH4ykRaq4OmTM4ja8W53jl8yQRjuwac8PraPkk</string>
    <string name="back4app_client_key">StYSLc9i2WGSafJue57unR6paF0krQ5Niv116ZW2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>