<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_main"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@android:color/transparent"> <!-- Para que el fondo sea solo la imagen -->

        <!-- Encabezado con Logo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:layout_gravity="center"
                android:src="@drawable/icono_ppal" />
        </LinearLayout>

        <!-- Campos de Usuario y Contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#318182"
            app:hintTextColor="@color/blanco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/pass"
            android:textColorHint="@color/white"
            app:boxStrokeColor="#318182"
            app:hintTextColor="@color/blanco">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/itPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/blanco" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Botón de Inicio de Sesión -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/teal_200"
            android:text="INICIAR SESIÓN"
            app:cornerRadius="12dp" />
    </LinearLayout>

    <!-- Sección de Registro -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:paddingBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sin_cuenta"
            android:textSize="16sp"
            android:textColor="@color/blanco"/>

        <TextView
            android:id="@+id/tvRegistro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/registrate"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/lavender"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
